--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://pbs.twimg.com/profile_banners/1490479928910962692/1644193571/1500x500) 0% 0% / cover no-repeat;
+    background: url(https://ageofsam.io/_nuxt/img/AOS-clones.6352dbe.gif) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
