--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://pbs.twimg.com/profile_banners/1505305905209950212/1651843272/1500x500) 0% 0% / cover no-repeat;
+    background: url(https://eddymint.vercel.app/static/media/background.4778034f.png) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
