--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://eddymint.vercel.app/static/media/background.4778034f.png) 0% 0% / cover no-repeat;
+    background: url(https://all-blue.s3.us-west-1.amazonaws.com/alphalabs/gallery/Gold.gif) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
