--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://all-blue.s3.us-west-1.amazonaws.com/alphalabs/gallery/Gold.gif) 0% 0% / cover no-repeat;
+    background: url(https://www.cosmicastronauts.com/_next/static/image/src/common/assets/image/crypto/minimalist-flipped.d89a3219af162b6166a804717b296737.png) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
