--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://pbs.twimg.com/profile_banners/1479210745372020737/1649444631/1500x500) 0% 0% / cover no-repeat;
+    background: url(https://www.regulatednft.io/slider/3.png) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
