--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://www.deadpirates.io/static/media/1232.6dee4049b2090364b902.png) 0% 0% / cover no-repeat;
+    background: url(https://images.squarespace-cdn.com/content/v1/625b007410dbef7c93bfeb0d/189ce9b9-7d90-4b51-9997-1d69476e2643/King+of+da+street+1.png?format=2500w) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
