--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://cdn.discordapp.com/splashes/912088163994963998/e543d38f53298a6666a22b00682ba3cd.jpg?size=2048) 0% 0% / cover no-repeat;
+    background: url(https://pbs.twimg.com/profile_banners/1506112872270614535/1651641552/1500x500) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
