--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://uploads-ssl.webflow.com/621242debd8032bdec14a2e6/622c91fed49f7473834724a2_Base%20club%20enhanced.png) 0% 0% / cover no-repeat;
+    background: url(https://pbs.twimg.com/profile_banners/1495766532034641925/1652405443/1500x500) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
