--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://pbs.twimg.com/profile_banners/1495766532034641925/1652405443/1500x500) 0% 0% / cover no-repeat;
+    background: url(https://cdn.discordapp.com/splashes/956106881519214643/1279744ab86706d82bf431fe897712d0.jpg?size=2048) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
