--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://susanoo.io/img/desk/1.png) 0% 0% / cover no-repeat;
+    background: url(https://pbs.twimg.com/profile_banners/1513263198413197315/1651686575/1500x500) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
