--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://www.justape.co/images/banner/banner_austin-skyline.png) 0% 0% / cover no-repeat;
+    background: url(https://cdn.discordapp.com/splashes/964593112372637727/e63bb0f39cf6dd0ab475bb9820180057.jpg?size=2048) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
