--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://static.wixstatic.com/media/b9ea41_2c15bdf0c8364d19a5330b2dded2684ff000.jpg/v1/fill/w_980,h_714,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/b9ea41_2c15bdf0c8364d19a5330b2dded2684ff000.jpg) 0% 0% / cover no-repeat;
+    background: url(https://pbs.twimg.com/profile_banners/1509022336288432133/1651027120/1500x500) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
