--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
     overflow-x: hidden;
     font-family: Poppins, sans-serif;
-    background: url(https://pbs.twimg.com/profile_banners/1509022336288432133/1651027120/1500x500) 0% 0% / cover no-repeat;
+    background: url(https://cdn.discordapp.com/splashes/927548537477140491/ce31a7fddef681a6619fe4bf600ef629.jpg?size=2048) 0% 0% / cover no-repeat;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
